--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,7 +5,7 @@
 
 .container {
     background-color: rgb(41, 35, 35);
-    height: 100vh;
+    height: auto;
 }
 
 .titulo {
@@ -45,4 +45,5 @@
 .contenedorNumeros {
     font-size: 25px;
     margin: 1em;
+    background-color: rgb(41, 35, 35);
 }
